--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# MQTT
+MQTT_HOST=broker.emqx.io
+MQTT_PORT=1883
+MQTT_AUTH_USERNAME=qwerty
+MQTT_AUTH_PASSWORD=public
